ebeast/app.scss
// This Source Code Form is licensed MPL-2.0: http://mozilla.org/MPL/2.0

/* Imports:
 * - app.scss -> b/mixins.scss -> variables.scss -> cssaux.scss
 * - app.scss -> scrollbar.scss
 */
@import 'b/mixins.scss';

// == Settings ==
$b-main-background-lg0:		lighten($b-main-background, 1%);
$b-main-background-lg1:		darken($b-main-background, 1%);
$theme-border-radius:		$b-theme-border-radius;
$toolbar-background:		$b-toolbar-background;
$toolbar-background-lg:		$b-toolbar-background-lg;
$button-foreground:		$b-button-foreground;
$button-light:			$b-button-light;
$button-dark:			$b-button-dark;
$button-radius:			$b-button-radius;
$button-border:			$b-button-border;
$button-hover:			$b-button-hover;
$button-active:			$b-button-active;
$button-active-fg:		$b-button-active-fg;
$button-active-lg:		$b-button-active-lg;
$button-active-border:		$b-button-active-border;
$glow-control:			$b-glow-control;
$focus-outline:			$b-focus-outline;

// == Body Styles ==
BrowserWindowDefaults		{ backgroundColor:          $b-default-background-color;		// #rrggbb needed
				  defaultFontSize:          $b-default-font-size / 1px;			// int needed
				  defaultMonospaceFontSize: $b-default-monospace-font-size / 1px;	// int needed
				}	// used by main.js
@supports (--makefile: rule) {
  gradient-01	{ im-convert: "-size 67x1080 -attenuate 0.2 +noise Uniform gradient:#{$b-main-background-lg0}-#{$b-main-background-lg1}"; }
}
@mixin gradient-01-bg		{ background-color: $b-theme-background;
				  // gradient with banding
				  background-image: linear-gradient(to bottom, $b-main-background-lg0 0%, $b-main-background-lg1 100%);
				  // gradient image with reduced banding
				  background: url(gradient-01.png) center repeat-x; background-size: auto 100%; }
html				{ width: 100vw; height: 100vh;
				  background-color: $b-default-background-color;
				  font-size: $b-default-font-size;
				}
body				{ width: 100%; height: 100%; overflow: hidden; font: inherit;
				  padding: 0; margin: 0; color: $b-theme-foreground;
				  @include gradient-01-bg; }
body.window-inactive 		{ color: fade($b-theme-foreground, 80%); }
*				{ box-sizing: border-box; text-overflow: ellipsis; }

// == Scrollbars ==
@import 'scrollbar.scss';

// == Application Widgets ==
.PlayControls			{ padding: 1em; margin: 1em;
				  background-color: $toolbar-background; background-image: $toolbar-background-lg; }
.StatusBar			{ text-align: left; background-color: #000; }
.StatusBar .StatusField		{ padding-left: 1em; }


// == Resets ==
input, textarea, keygen, select,
button          		{ font: inherit; }
button          		{ -webkit-appearance: normal; }

// https://www.w3.org/TR/css-flexbox-1/#valdef-flex-basis-content
// https://css-tricks.com/snippets/css/a-guide-to-flexbox/

// == Font-family "Inter" ==
@font-face	{ font-family: 'Inter'; font-style: normal; font-weight: 500;
		  src: url("Inter-Medium.woff2") format("woff2"); }
@mixin inter-font-features() {
  font-feature-settings:
  "dlig" 1,     // Discretionary ligatures, e.g. !? -> interrobang
  // "tnum",	// Tabular numbers (fixed width); use `font-variant-numeric: tabular-nums;`
  "salt" 0,     // Stylistic Alternates
  "ss01" 0,     // Stylistic set 1 "Open Digits"
  "ss02" 0,     // Stylistic set 2 "Disambiguation"
  "ss03" 0,     // Stylistic set 3 "Lower case r curves into round neighbors"
  // "zero",    // Slashed zero; use `font-variant-numeric: slashed-zero;`
  "numr" 0,     // Numerators
  "dnom" 0,     // Denominators
  "case" 1,     // Case alternates
  "frac" 0,     // Contextual automatic fractions
  "sups" 0,     // Superscript
  "subs" 0,     // Subscript
  "cpsp" 0,     // Capital spacing (adds 16 UPM to each sidebearing)
  "cv01" 1,     // Alternate one
  "cv02" 1,     // Open four
  "cv03" 1,     // Open six
  "cv04" 1,     // Open nine
  "cv05" 1,     // Lower case L with tail
  "cv06" 1,     // Lower case r with curved tail
  "cv07" 0,     // Alternate German double-s
  "cv08" 1,     // Upper-case i with serif
  "cv09" 0,     // Flat top three
  "cv10" 1,     // Capital G with spur
  "cv11" 0,     // Single-storey a
  "calt",       // Contextual alternates (default)
  "liga",       // Common ligatures (default, none in Inter)
  "kern";       // Kerning (default)
}
@mixin inter-font-family	{
  font-family: 'Inter', BlinkMacSystemFont, -apple-system, Roboto, Helvetica, Arial, sans-serif;
  letter-spacing: 0.011em;
  -webkit-font-smoothing: antialiased;
  font-variation-settings: "wght" 450; // "slnt" 0deg
  @include inter-font-features;
}
@mixin inter-font-bold		{ letter-spacing: 0.031em; font-weight: bold; }
@mixin inter-font-bolder	{ letter-spacing: 0.031em; font-weight: bolder; }
@mixin inter-font-italic	{ font-style: italic; }

// == Font Setup ==
.inter, html				{ @include inter-font-family; }
.italic, i, cite, em, var, address, dfn	{ @include inter-font-italic; }
::-webkit-validation-bubble-heading,
strong, b, h1, h2, h3, h4, h5, h6, th,
.bold					{ @include inter-font-bold; }
.bolder, optgroup			{ @include inter-font-bolder; }
input:-webkit-autofill-strong-password,
plaintext, listing, xmp,
.tnum, .code, tt, pre, code, kbd, samp	{ font-variant-numeric: tabular-nums slashed-zero; }
.slashed-zero				{ font-variant-numeric: slashed-zero; }
.tabular-nums				{ font-variant-numeric: tabular-nums; }
.tabular-nums.slashed-zero		{ font-variant-numeric: tabular-nums slashed-zero; }

/* == Flex Layout == */
.hflex         { display: flex; flex-flow: row; flex-basis: auto; flex-wrap: nowrap;
		 justify-content: space-evenly; align-items: stretch; align-content: stretch; }
.vflex         { display: flex; flex-flow: column; flex-basis: auto; flex-wrap: nowrap;
		 justify-content: space-evenly; align-items: stretch; align-content: stretch; }
.grow0         { flex-grow: 0; }
.grow1         { flex-grow: 1; }
.grow2         { flex-grow: 2; }
.grow3         { flex-grow: 3; }
.grow4         { flex-grow: 4; }
.grow5         { flex-grow: 5; }
.grow6         { flex-grow: 6; }
.grow7         { flex-grow: 7; }
.grow8         { flex-grow: 8; }
.grow9         { flex-grow: 9; }
.shrink0       { flex-shrink: 0; }
.shrink1       { flex-shrink: 1; }
.shrink2       { flex-shrink: 2; }
.shrink3       { flex-shrink: 3; }
.shrink4       { flex-shrink: 4; }
.shrink5       { flex-shrink: 5; }
.shrink6       { flex-shrink: 6; }
.shrink7       { flex-shrink: 7; }
.shrink8       { flex-shrink: 8; }
.shrink9       { flex-shrink: 9; }

/* == Bubbles == */
// Tooltips via CSS, using the data-bubble="" attribute
.data-bubble {
  display: flex; z-index: 9999; pointer-events: none;
  position: absolute;
  //*bottom: 100%; left: 50%; transform: translateX(-50%);*/
  margin: 0; padding: 2px 3px; border-radius: 1px;
  border: dppx(2) ridge #a59900; color: #fff133;
  background: #1a1800; background-image: linear-gradient(to bottom right, #0d0c00, #2a2700);
  font-variant-numeric: tabular-nums;
  content: attr(data-bubble); white-space: nowrap;
  transition: visibility 0.1s, opacity 0.1s ease-in-out;
  visibility: hidden; opacity: 0;
  &.data-bubble-visible {
    visibility: visible; opacity: 0.78;
  }
}

